--- a/app/views/administration/orders/show.html.erb
+++ b/app/views/administration/orders/show.html.erb
@@ -3,9 +3,9 @@
 <table class="table">
 	<thead>
 		<tr>
-			<th>Cliente</th>
-			<th>Data Creazione</th>
-			<th>Data Evasione</th>
+			<th>Customer</th>
+			<th>Creation Date</th>
+			<th>Evasion Date</th>
 			<th></th>
 		</tr>
 	</thead>
@@ -35,10 +35,10 @@
 <table class="table table-striped">
 	<thead>
 		<tr>
-			<th>Prodotto</th>
-			<th>Quantità</th>
-			<th>Prezzo Unitario</th>
-			<th>Totale</th>
+			<th>Product</th>
+			<th>Quantity</th>
+			<th>Price</th>
+			<th>Total	</th>
 		</tr>
 	</thead>
 	<tbody>
