--- a/app/views/administration/providers/index.html.erb
+++ b/app/views/administration/providers/index.html.erb
@@ -41,4 +41,4 @@
 </table>
 
 <br>
-<%= link_to 'New Customer', new_administration_provider_path, class: 'btn btn-info' %>
+<%= link_to 'New Provider', new_administration_provider_path, class: 'btn btn-info' %>
