--- a/app/views/catalog/index.html.erb
+++ b/app/views/catalog/index.html.erb
@@ -1,12 +1,12 @@
-<h1>Prodotti</h1>
+<h1>Products</h1>
 
 <table class="table">
   <thead>
     <tr>
-      <th>Nome</th>
-      <th>Descrizione</th>
-      <th>Prezzo</th>
-      <th>Quantità</th>
+      <th>Name</th>
+      <th>Description</th>
+      <th>Price</th>
+      <th>Quantity</th>
       <th></th>
     </tr>
   </thead>
