--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -4,8 +4,8 @@
   <thead>
     <tr>
       <th>Id</th>
-      <th>Data Creazione</th>
-      <th>Data Evasione</th>
+      <th>Creation Date</th>
+      <th>Evasion Date</th>
       <th>Number of Items</th>
       <th>Total Price</th>
       <th colspan="5"></th>
