--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -2,9 +2,9 @@
 <table class="table">
 	<thead>
 		<tr>
-			<th>Cliente</th>
-			<th>Data Creazione</th>
-			<th>Data Evasione</th>
+			<th>Customer</th>
+			<th>Creation Date</th>
+			<th>Evasion Date</th>
 			<th colspan="3"></th>
 		</tr>
 	</thead>
@@ -12,7 +12,7 @@
 		<tr>
 			<td><%= @order.customer.name %> <%= @order.customer.surname %></td>
 			<td><%= @order.created_at.to_formatted_s(:short) %></td>
-			<td><% if @order.evaded %><%= @order.updated_at.to_formatted_s(:short) %><% else %> Non Evaso <% end %></td>
+			<td><% if @order.evaded %><%= @order.updated_at.to_formatted_s(:short) %><% else %> Not evaded <% end %></td>
 		</tr>
 	</tbody>
 </table>
@@ -24,9 +24,9 @@
 <table class="table">
 	<thead>
 		<tr>
-			<th>Prodotto</th>
-			<th>Quantità</th>
-			<th>Prezzo</th>
+			<th>Product</th>
+			<th>Quantity</th>
+			<th>Price</th>
 		</tr>
 	</thead>
 	<tbody>
